fixed styling references

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" href="stylesheets/normalize.css">
-    <link rel="stylesheet" href="stylesheets/skeleton.css">
-    <link rel="stylesheet" href="stylesheets/app.css">
+    <link rel="stylesheet" href="public/stylesheets/normalize.css">
+    <link rel="stylesheet" href="public/stylesheets/skeleton.css">
+    <link rel="stylesheet" href="public/stylesheets/application.css">
 
   </head>
   <body>
@@ -54,7 +54,7 @@
       <section class="conditions-result">
         <div class="row">
           <div class="one-half column">
-            <h3><%= city %></h3>
+            <h4><%= city %></h4>
             <p>Temperature: <%= tempC %> C</p>
             <p>But Feels Like: <%= feelsLike %> C</p>
             <p><%= weather %></p>
